--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
     "axios": "^0.19.0",
+    "gh-pages": "^2.0.1",
     "mdbreact": "^4.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -15,6 +16,7 @@
     "typescript": "3.5.3"
   },
   "scripts": {
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
