--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "typescript": "3.5.3"
   },
   "scripts": {
-    "deploy": "gh-pages -b master -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
