--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-media": "^1.9.2",
+    "react-responsive-carousel": "^3.1.50",
     "react-scripts": "3.0.1",
     "react-slick": "^0.25.2",
     "typescript": "3.5.3"
